--- a/src/assets/stylesheets/componentStyles/device-groups.scss
+++ b/src/assets/stylesheets/componentStyles/device-groups.scss
@@ -3,9 +3,9 @@
  *
  * SPDX-License-Identifier: Apache-2.0
  */
-.sideNavbar_navCard {
-  margin-left: 0 !important;
-}
+// .sideNavbar_navCard {
+//   margin-left: 0 !important;
+// }
 .device-groups-view {
   margin-top: 40px;
   &-col-2 {
