Resolved physical view issue and zoom functionality. (#25)
* Dashboard screens, Services and Device + Sim view

* Prettier formatting

* ng lint error fixes

* ng lint warnings cleared

* Test issues resolved

* lint issue fix

* initial commit with small-cells work

* Package

* static Data Integration (device-sim) and device Groups (partial)

* Linting issues solved

* 10 jan login work start

* device-groups static data integration (except add new devices and UI Issues)

* small fix (wrap the remove devices view

* Physical View basic code

* partial slices data and admin panel bugs

* Connected view complete

* completed slices static-data and inventory (Device/SIM) Forms

* Physical view

* Small cells screen integration

* Small cells added

* Linting issues resolved

* Created modals

* services - static data integration and design changes

* Lint formatting

* sideNavbar styling

* Navbar redirection issue resolved

* pull master

* Activate a device issue

* partial formValidations

* partial button changes

* Device SIM issue resolved

* small cell work is done

* admin temp

* Test issues resolved

* src.zip file removal and updated baseurl in environment.prod

* Resizing issue resolved and dynamic site plans done

* Layout changes

* conflict resolved

* layout changes and revert back to original config methods

* Layout,resizing,dynamic site plans and bugs fixes

* Layout,resizing,dynamic site plans and bugs fixes

* device-sim  data retrieve fix

* pulling karthik code

* Code updates from Karthik and Kapil

* befor master pull

* onos conflict

Co-authored-by: Murali Vutti <murali.vutti@zensark.com>
Co-authored-by: murali-vutti-zensark <54984792+murali-vutti-zensark@users.noreply.github.com>
Co-authored-by: karthik-zensark <karthik.gaddam@zensark.com>

--- a/src/app/Modules/dashboard/dashboard.component.html
+++ b/src/app/Modules/dashboard/dashboard.component.html
@@ -101,17 +101,6 @@
                           <p class="no-highlights">0 Alerts</p>
                         </div>
                       </div>
-                      <!-- <div
-                        class="highlighted-counting"
-                        *ngIf="siteId === 'berlin'"
-                      >
-                        <div class="card-icon">
-                          <img src="assets/AdminPanel/alert.svg" />
-                        </div>
-                        <div class="card-category">
-                          <p class="no-highlights">0 Alerts</p>
-                        </div>
-                      </div> -->
                     </div>
                   </div>
                   <p class="compare-detail mb-0" *ngIf="siteId !== 0">
@@ -126,12 +115,6 @@
                   <p class="compare-detail" *ngIf="siteId === 0">
                     0 devices blocked from accessing apps
                   </p>
-                  <!-- <p class="compare-detail mb-0" *ngIf="siteId === 'berlin'">
-                    0 anamoulous behaviours detected
-                  </p>
-                  <p class="compare-detail" *ngIf="siteId === 'berlin'">
-                    0 devices blocked from accessing apps
-                  </p> -->
                 </div>
               </div>
             </div>
@@ -173,6 +156,7 @@
                   let planIndex = index
                 "
                 [value]="planIndex"
+                (click)="slices.selectedPlan = planIndex"
               >
                 {{ plan.id }}
               </mat-button-toggle>
@@ -185,11 +169,22 @@
               class="section-group-btn"
               [(ngModel)]="viewType"
             >
-              <mat-button-toggle value="Logical" (click)="getSlices()"
+              <mat-button-toggle
+                value="Logical"
+                (click)="getSlices(); slices.viewType = 'Logical'"
                 >Logical</mat-button-toggle
               >
               <mat-button-toggle
+                *ngIf="config === null"
                 [disabled]="config === null"
+                value="Physical"
+                class="border-none"
+                >Physical</mat-button-toggle
+              >
+              <mat-button-toggle
+                *ngIf="config !== null"
+                [disabled]="config === null"
+                (click)="slices.viewType = 'Physical'"
                 value="Physical"
                 class="border-none"
                 >Physical</mat-button-toggle
@@ -197,11 +192,6 @@
             </mat-button-toggle-group>
           </div>
         </div>
-        <!-- <aep-slices
-          #slices
-          (informParent)="parentWillTakeActionSlice()"
-          *ngIf="viewType === 'Logical'"
-        ></aep-slices> -->
       </div>
       <div *ngIf="isAcknowledged === 8" class="col-lg-4">
         <div class="site-visite-bx">
@@ -216,10 +206,8 @@
       <aep-slices
         #slices
         (informParent)="parentWillTakeActionSlice($event)"
-        *ngIf="viewType === 'Logical'"
       ></aep-slices>
-      <div *ngIf="viewType === 'Physical'" class="dashboard__physical-view">
-        <!-- <svg></svg> -->
+      <!-- <div *ngIf="viewType === 'Physical'" class="dashboard__physical-view">
         <img
           class="dashboard__physical-view__image"
           [src]="
@@ -311,7 +299,7 @@
             </mat-menu>
           </div>
         </ng-container>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
