--- a/src/app/Modules/settings/device-sim/device-sim.component.html
+++ b/src/app/Modules/settings/device-sim/device-sim.component.html
@@ -952,6 +952,24 @@
                           ></div>
                         </div>
                       </div>
+                      <div
+                        id="1W"
+                        class="
+                          progress
+                          col
+                          device-details-blocks device-progress-bar
+                        "
+                        *ngIf="
+                          deviceSimsDetailsProgressToggleWeek && zoomIn === 2
+                        "
+                      >
+                        <div>
+                          <div
+                            class="dayChart"
+                            id="device_timeline{{ deviceIndex }}"
+                          ></div>
+                        </div>
+                      </div>
                     </div>
                     <div class="button-sec d-flex">
                       <button
