Releasing 0.0.10 - fixing graphs

--- a/src/app/Modules/settings/device-sim/device-sim.component.html
+++ b/src/app/Modules/settings/device-sim/device-sim.component.html
@@ -1012,7 +1012,7 @@
                           />
                         </button>
                       </div>
-                      <div class="failed-link">
+                      <div class="failed-link" *ngIf="0">
                         <img src="../../assets/deviceSim/close-red.svg" />
                         Ping Failed
                       </div>
