--- a/src/app/Modules/dashboard/dashboard.component.html
+++ b/src/app/Modules/dashboard/dashboard.component.html
@@ -95,6 +95,7 @@
                           <p class="no-highlights">0 Alerts</p>
                         </div>
                       </div>
+                      -->
                     </div>
                   </div>
                   <p class="compare-detail mb-0" *ngIf="siteId !== 0">
@@ -109,6 +110,12 @@
                   <p class="compare-detail" *ngIf="siteId === 0">
                     0 devices blocked from accessing apps
                   </p>
+                  <!-- <p class="compare-detail mb-0" *ngIf="siteId === 'berlin'">
+                    0 anamoulous behaviours detected
+                  </p>
+                  <p class="compare-detail" *ngIf="siteId === 'berlin'">
+                    0 devices blocked from accessing apps
+                  </p> -->
                 </div>
               </div>
             </div>
