Unit testing of dashboardh module

--- a/src/app/Modules/dashboard/dashboard.component.html
+++ b/src/app/Modules/dashboard/dashboard.component.html
@@ -101,6 +101,17 @@
                           <p class="no-highlights">0 Alerts</p>
                         </div>
                       </div>
+                      <!-- <div
+                        class="highlighted-counting"
+                        *ngIf="siteId === 'berlin'"
+                      >
+                        <div class="card-icon">
+                          <img src="assets/AdminPanel/alert.svg" />
+                        </div>
+                        <div class="card-category">
+                          <p class="no-highlights">0 Alerts</p>
+                        </div>
+                      </div> -->
                     </div>
                   </div>
                   <p class="compare-detail mb-0" *ngIf="siteId !== 0">
@@ -115,6 +126,12 @@
                   <p class="compare-detail" *ngIf="siteId === 0">
                     0 devices blocked from accessing apps
                   </p>
+                  <!-- <p class="compare-detail mb-0" *ngIf="siteId === 'berlin'">
+                    0 anamoulous behaviours detected
+                  </p>
+                  <p class="compare-detail" *ngIf="siteId === 'berlin'">
+                    0 devices blocked from accessing apps
+                  </p> -->
                 </div>
               </div>
             </div>
