--- a/src/app/Modules/settings/admin/admin.component.html
+++ b/src/app/Modules/settings/admin/admin.component.html
@@ -414,7 +414,7 @@
           <!-- Edit form panel (User-View) -->
           <form [formGroup]="editForm">
             <div *ngIf="editUsers.indexOf(user.id) >= 0">
-              <mat-card class="col admin-edit-form">
+              <mat-card class="col">
                 <mat-card-content>
                   <div class="admin-addNew-form my-4 mx-2 d-flex">
                     <div class="admin-addNew-form-ppicHolder col-2 mx-3">
