--- a/src/app/Modules/settings/dialogs/select-devices/select-devices.component.html
+++ b/src/app/Modules/settings/dialogs/select-devices/select-devices.component.html
@@ -16,18 +16,18 @@
       <div class="select-device-container d-flex">
         <div
           class="select-device-container-spacings"
-          *ngFor="let device of inventoryDevices"
+          *ngFor="let device of devices"
         >
           <div
             class="select-device-container-deviceHolder"
-            (click)="changeSelection(device['serial-number'])"
+            (click)="changeSelection(device.id)"
           >
             <div class="mx-1 d-flex">
               <!-- <mat-checkbox type=checkbox [checked]="selectedSim === sim.simNumber"  class="mx-2"></mat-checkbox>
                -->
               <img
                 [src]="
-                  selectedDevice['serial-number'] === device['serial-number']
+                  selectedDevice === device.id
                     ? 'assets/deviceSim/selected-card.svg'
                     : 'assets/deviceSim/select.svg'
                 "
@@ -36,8 +36,8 @@
                 class="mx-2"
                 src="../../../assets/deviceSim/ccCam-deviceDialog.svg"
               />
-              <span class="mx-1">{{ device["display-name"] }}</span>
-              <span class="mx-1">{{ device.location }}</span>
+              <span class="mx-1">{{ device.deviceName }}</span>
+              <span class="mx-1">{{ device.locationName }}</span>
             </div>
           </div>
         </div>
