--- a/src/app/Modules/settings/small-cell/small-cell.component.html
+++ b/src/app/Modules/settings/small-cell/small-cell.component.html
@@ -391,30 +391,23 @@
     </div>
     <div *ngIf="viewType === 'Physical'" class="small-cells__physical-view">
       <!-- <svg></svg> -->
-      <!-- <div *ngFor="let sites of config?.sites"> -->
       <img
-        *ngIf="sitePlanPresent"
         class="small-cells__physical-view__image"
         [src]="
           baseUrl +
-          config?.sites[sitePlanPresentIndex]['site-plans']['site-plan-list'][
-            selectedPlan
-          ]['svg-file']
+          config?.sites[0]['site-plans']['site-plan-list'][selectedPlan][
+            'svg-file'
+          ]
         "
         #physicalViewImage
       />
-      <!-- <div *ngIf="!sitePlanPresent" class="pt-5">
-        There are no site-plans at the moment for this site.
-      </div> -->
       <ng-container *ngFor="let device of devices">
         <div
           class="small-cells__physical-view__device"
           *ngIf="
-            sitePlanPresent &&
             device['position'] &&
-            config?.sites[sitePlanPresentIndex]['site-plans']['site-plan-list'][
-              selectedPlan
-            ].id === device['position']['site-plan']
+            config?.sites[0]['site-plans']['site-plan-list'][selectedPlan]
+              .id === device['position']['site-plan']
           "
           [style]="
             'top: ' +
@@ -442,11 +435,9 @@
         <ng-container *ngFor="let device of devices">
           <svg:line
             *ngIf="
-              sitePlanPresent &&
               device['position'] &&
-              config?.sites[sitePlanPresentIndex]['site-plans'][
-                'site-plan-list'
-              ][selectedPlan].id === device['position']['site-plan']
+              config?.sites[0]['site-plans']['site-plan-list'][selectedPlan]
+                .id === device['position']['site-plan']
             "
             [attr.x1]="device['position']['position-x']"
             [attr.y1]="device['position']['position-y'] + 20"
@@ -461,11 +452,9 @@
         <div
           class="small-cells__physical-view__small-cell"
           *ngIf="
-            sitePlanPresent &&
             smallCell['position'] &&
-            config?.sites[sitePlanPresentIndex]['site-plans']['site-plan-list'][
-              selectedPlan
-            ].id === smallCell['position']['site-plan']
+            config?.sites[0]['site-plans']['site-plan-list'][selectedPlan]
+              .id === smallCell['position']['site-plan']
           "
           [style]="
             'top: ' +
@@ -493,7 +482,6 @@
           </mat-menu>
         </div>
       </ng-container>
-      <!-- </div> -->
     </div>
   </div>
   <!-- </div> -->
