partial unit testing (Device-sim), (services)

--- a/src/app/Modules/settings/small-cell/small-cell.component.html
+++ b/src/app/Modules/settings/small-cell/small-cell.component.html
@@ -41,7 +41,11 @@
             [(ngModel)]="viewType"
           >
             <mat-button-toggle value="List">List</mat-button-toggle>
-            <mat-button-toggle value="Physical" class="border-none"
+            <mat-button-toggle
+              (click)="checkSitePlans()"
+              class="border-none"
+              value="Physical"
+              [disabled]="!sitePlanPresent"
               >Physical</mat-button-toggle
             >
           </mat-button-toggle-group>
