--- a/src/app/Modules/dashboard/pages/sites/sites.component.html
+++ b/src/app/Modules/dashboard/pages/sites/sites.component.html
@@ -45,7 +45,16 @@
               <div class="card-category">
                 <p class="">
                   {{ site.devices.length }} Devices
-                  <span>10 Unprovisioned</span>
+                  <span *ngIf="site.unprovisionedDevices.length > 1"
+                    >{{ site.unprovisionedDevices.length }} Devices</span
+                  >
+                  <span
+                    *ngIf="
+                      site.unprovisionedDevices.length > 0 &&
+                      site.unprovisionedDevices.length < 2
+                    "
+                    >{{ site.unprovisionedDevices.length }} Device</span
+                  >
                 </p>
               </div>
             </div>
