--- a/src/app/Modules/settings/device-sim/device-sim.component.html
+++ b/src/app/Modules/settings/device-sim/device-sim.component.html
@@ -661,8 +661,8 @@
                           </div>
                           <div class="info-text">
                             This device is present In
-                            <span>Device group 4</span> and
-                            <span>CCTV Slices</span>
+                            <span>{{ device["device-group-in"] }}</span> and
+                            <span>{{ device["slice-in"] }}</span>
                           </div>
                         </div>
                       </div>
@@ -1632,7 +1632,7 @@
         </div>
         <div class="mx-3 device-details-blocks device-name ng-tns-c119-0">
           <div class="title">ICCID Number</div>
-          <div class="desc">{{ sims.simIccid }}</div>
+          <div class="desc">{{ sims.iccid }}</div>
         </div>
       </mat-card>
       <!-- </div> -->
