--- a/src/assets/stylesheets/componentStyles/slices.scss
+++ b/src/assets/stylesheets/componentStyles/slices.scss
@@ -459,6 +459,26 @@
       border-radius: 4px;
       background: #0063f7;
     }
+    .next-btn-active {
+      color: #fff;
+      height: 49px;
+      width: 108px;
+      text-align: start;
+      margin-right: 1rem;
+      border: 1px solid #0063f7;
+      border-radius: 4px;
+      background: #0063f7;
+    }
+    .next-btn-inactive {
+      color: #fff;
+      height: 49px;
+      width: 108px;
+      text-align: start;
+      margin-right: 1rem;
+      border: 1px solid #d8d8d8;
+      border-radius: 4px;
+      background: #d8d8d8;
+    }
     .back-btn {
       color: #0063f7;
       height: 49px;
